Working presentation and animation controllers

--- a/DCTBanner Demo/Base.lproj/Main.storyboard
+++ b/DCTBanner Demo/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="OE4-08-N1P">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--DCTBanner-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DCTBanner_Demo" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,12 +15,70 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5F5-Yc-mn9">
+                                <rect key="frame" x="234" y="213" width="132" height="175"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMn-bs-xj7">
+                                        <rect key="frame" x="0.0" y="0.0" width="132" height="45"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <state key="normal" title="Success"/>
+                                        <connections>
+                                            <action selector="presentSuccess" destination="BYZ-38-t0r" eventType="touchUpInside" id="ARx-1P-5Ce"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mtk-CJ-1aL">
+                                        <rect key="frame" x="0.0" y="65" width="132" height="45"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <state key="normal" title="Information"/>
+                                        <connections>
+                                            <action selector="presentInformation" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nlb-GB-pWU"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f5t-Qt-jYy">
+                                        <rect key="frame" x="0.0" y="130" width="132" height="45"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <state key="normal" title="Error"/>
+                                        <connections>
+                                            <action selector="presentError" destination="BYZ-38-t0r" eventType="touchUpInside" id="TOm-dT-B1z"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                            </stackView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5F5-Yc-mn9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="PoZ-AS-ubn"/>
+                            <constraint firstItem="5F5-Yc-mn9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="se0-FQ-ZtV"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="DCTBanner" id="iJu-uY-1UO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="691" y="517"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lqu-4t-xJs">
+            <objects>
+                <navigationController id="OE4-08-N1P" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FV0-bb-FHT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="o9r-JS-TlS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Dw-xg-HrZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2" y="517"/>
         </scene>
     </scenes>
 </document>
